--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,150 +1,79 @@
-name: KVM Ubuntu‑22.04 VM (persistent)
+name: Persistent QEMU VM with Auto-Restart
 
 on:
-  push:
   workflow_dispatch:
+  schedule:
+    - cron: '0 */5 * * *'  # Every 5 hours
 
 jobs:
-  kvm-vm:
-    runs-on: self-hosted   # host must expose /dev/kvm
+  persistent-vm:
+    runs-on: ubuntu-latest
+
     steps:
-    # ───────────────────────────────────────────────────────────
-    - name: Prep host & VM (idempotent)
-      shell: bash
+    - name: Install dependencies
       run: |
-        set -euo pipefail
+        sudo apt update
+        sudo apt install -y qemu-kvm cloud-image-utils genisoimage openssh-client wget tmate
 
-        # ----- VARIABLES -----------------------------------------------------
-        VM_NAME="gha-ubuntu22"
-        WORKDIR="/var/lib/vm-images"
-        BASE_IMG="$WORKDIR/ubuntu-22.04-base.qcow2"
-        DISK="$WORKDIR/${VM_NAME}.qcow2"
-        SEED="$WORKDIR/${VM_NAME}-seed.img"
-        SIZE_GB=20
-        RAM_MB=4096
-        CPUS=2
-        IMG_URL="https://cloud-images.ubuntu.com/releases/22.04/release/ubuntu-22.04-server-cloudimg-amd64.img"
-        TIMER_UNIT="/etc/systemd/system/${VM_NAME}-reboot.timer"
-        SERVICE_UNIT="/etc/systemd/system/${VM_NAME}-reboot.service"
-        # DHCP address for libvirt default network (first lease)
-        GUEST_IP="192.168.122.100"
-
-        sudo mkdir -p "$WORKDIR"
-        sudo chown "$(id -u):$(id -g)" "$WORKDIR"
-
-        # ----- PACKAGES ------------------------------------------------------
-        if ! command -v qemu-system-x86_64 >/dev/null; then
-          sudo apt update
-          sudo apt install -y qemu-system-x86 qemu-utils libvirt-daemon-system \
-                              libvirt-clients cloud-image-utils openssh-client \
-                              sshpass
-          sudo systemctl enable --now libvirtd
+    - name: Restore persistent disk
+      id: restore
+      run: |
+        if curl -s -f -O -L "https://github.com/${{ github.repository }}/releases/download/vm-disk/persistent.img"; then
+          echo "Disk restored from release."
+        else
+          echo "No previous disk found, creating new one."
+          qemu-img create -f qcow2 persistent.img 10G
         fi
 
-        # ----- BASE IMAGE (download once) ------------------------------------
-        if [[ ! -f "$BASE_IMG" ]]; then
-          echo "Downloading Ubuntu cloud image…"
-          wget -qO "$BASE_IMG" "$IMG_URL"
-          qemu-img resize "$BASE_IMG" ${SIZE_GB}G
-        fi
+    - name: Download Ubuntu cloud image
+      run: |
+        wget -q https://cloud-images.ubuntu.com/focal/current/focal-server-cloudimg-amd64.img -O ubuntu.img
 
-        # ----- DIFFERENCING DISK (persistent) --------------------------------
-        if [[ ! -f "$DISK" ]]; then
-          echo "Creating QCOW2 differencing disk…"
-          qemu-img create -f qcow2 -b "$BASE_IMG" "$DISK"
-        fi
-
-        # ----- CLOUD‑INIT SEED ----------------------------------------------
-        if [[ ! -f "$SEED" ]]; then
-          cat > /tmp/user-data <<'EOF'
+    - name: Create cloud-init config (auto root login)
+      run: |
+        mkdir -p seed
+        echo "instance-id: githubvm" > seed/meta-data
+        cat > seed/user-data <<EOF
         #cloud-config
-        hostname: gha-vm
         users:
-          - name: runner
+          - name: root
+            ssh-authorized-keys:
+              - $(curl -s https://api.github.com/repos/${{ github.repository_owner }}/keys | grep '"key":' | head -n1 | cut -d'"' -f4)
             sudo: ALL=(ALL) NOPASSWD:ALL
-            groups: users, admin
             shell: /bin/bash
-            lock_passwd: false
-            plain_text_passwd: "runner"
-        ssh_pwauth: true
-        package_upgrade: true
+        ssh_pwauth: false
+        disable_root: false
         EOF
-          echo "instance-id: iid-${VM_NAME}" > /tmp/meta-data
-          cloud-localds "$SEED" /tmp/user-data /tmp/meta-data
-        fi
+        cloud-localds seed.img seed/user-data seed/meta-data
 
-        # ----- DEFINE VM IF NEEDED ------------------------------------------
-        if ! sudo virsh dominfo "$VM_NAME" &>/dev/null; then
-          echo "Defining VM $VM_NAME…"
-          sudo virt-install \
-            --name "$VM_NAME" \
-            --memory "$RAM_MB" --vcpus "$CPUS" \
-            --import \
-            --disk path="$DISK",format=qcow2 \
-            --disk path="$SEED",device=cdrom \
-            --network network=default,model=virtio \
-            --os-type linux --os-variant ubuntu22.04 \
-            --noautoconsole
-        fi
-
-        # ----- SYSTEMD TIMER FOR 6‑HOUR REBOOTS -----------------------------
-        if [[ ! -f "$SERVICE_UNIT" ]]; then
-          echo "Creating systemd units for periodic reboot…"
-          sudo tee "$SERVICE_UNIT" >/dev/null <<EOF
-        [Unit]
-        Description=Reboot $VM_NAME safely
-
-        [Service]
-        Type=oneshot
-        ExecStart=/usr/bin/virsh reboot $VM_NAME --mode=agent
-        EOF
-        fi
-
-        if [[ ! -f "$TIMER_UNIT" ]]; then
-          sudo tee "$TIMER_UNIT" >/dev/null <<EOF
-        [Unit]
-        Description=Reboot $VM_NAME every 6 hours
-
-        [Timer]
-        OnCalendar=*-*-* *:00:00/6
-        Persistent=true
-
-        [Install]
-        WantedBy=timers.target
-        EOF
-          sudo systemctl daemon-reload
-          sudo systemctl enable --now "$(basename "$TIMER_UNIT")"
-        fi
-
-        # ----- START VM ------------------------------------------------------
-        sudo virsh start "$VM_NAME" || true
-
-        # ----- WAIT FOR SSH --------------------------------------------------
-        echo "Waiting for SSH on $GUEST_IP…"
-        for i in {1..40}; do
-          if sshpass -prunner ssh -o StrictHostKeyChecking=no -o ConnectTimeout=5 runner@$GUEST_IP 'echo ok' 2>/dev/null; then
-            echo "✅ VM is up"
-            exit 0
-          fi
-          sleep 5
-        done
-        echo "❌ Timed out waiting for VM SSH" && exit 1
-
-    # ───────────────────────────────────────────────────────────
-    - name: Do work inside the VM
-      shell: bash
+    - name: Launch VM with restored disk
       run: |
-        GUEST_IP="192.168.122.100"
-        sshpass -prunner ssh -o StrictHostKeyChecking=no runner@$GUEST_IP <<'EOSSH'
-          set -eux
-          echo "Running inside guest at $(hostname) $(date)"
-          # ── Replace the following with your build / test / deploy steps ──
-          sudo apt-get update -qq
-          sudo apt-get install -yqq neofetch
-          neofetch
-        EOSSH
+        nohup qemu-system-x86_64 \
+          -enable-kvm \
+          -m 16000 -smp 4 \
+          -drive file=persistent.img,format=qcow2 \
+          -drive file=ubuntu.img,format=qcow2 \
+          -drive file=seed.img,format=raw \
+          -net nic -net user,hostfwd=tcp::2222-:22 \
+          -nographic > vm.log 2>&1 &
 
-    # ───────────────────────────────────────────────────────────
-    - name: (Optional) shutdown VM when job is done
+    - name: Wait for VM SSH to be ready
+      run: |
+        for i in {1..30}; do
+          nc -z localhost 2222 && echo "VM is up!" && break
+          echo "Waiting for VM SSH..."
+          sleep 3
+        done
+
+    - name: Start tmate for terminal access
+      uses: mxschmitt/action-tmate@v3
+      with:
+        limit-access-to-actor: false
+
+    - name: Upload persistent disk for next run
       if: always()
-      run: sudo virsh shutdown gha-ubuntu22 || true
+      run: |
+        curl -sL https://github.com/${{ github.repository }}/releases/download/vm-disk/persistent.img && echo "Backup already exists" && exit 0
+        gh release create vm-disk persistent.img -t "VM Disk Backup" -n "Auto backup of persistent disk"
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
