--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,4 +1,4 @@
-name: Persistent QEMU VM with Auto-Restart
+name: Persistent QEMU VM (Auto Restart, Backup, Shutdown)
 
 on:
   workflow_dispatch:
@@ -8,22 +8,19 @@ on:
 jobs:
   persistent-vm:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write  # For release uploads
 
     steps:
     - name: Install dependencies
       run: |
         sudo apt update
-        sudo apt install -y qemu-kvm cloud-image-utils genisoimage openssh-client wget tmate
+        sudo apt install -y qemu-kvm cloud-image-utils genisoimage openssh-client wget tmate gh
 
-    - name: Restore persistent disk
-      id: restore
+    - name: Download existing persistent disk if available
       run: |
-        if curl -s -f -O -L "https://github.com/${{ github.repository }}/releases/download/vm-disk/persistent.img"; then
-          echo "Disk restored from release."
-        else
-          echo "No previous disk found, creating new one."
-          qemu-img create -f qcow2 persistent.img 10G
-        fi
+        echo "Checking for previous VM disk..."
+        gh release download vm-disk -p persistent.img || qemu-img create -f qcow2 persistent.img 10G
 
     - name: Download Ubuntu cloud image
       run: |
@@ -38,7 +35,7 @@ jobs:
         users:
           - name: root
             ssh-authorized-keys:
-              - $(curl -s https://api.github.com/repos/${{ github.repository_owner }}/keys | grep '"key":' | head -n1 | cut -d'"' -f4)
+              - $(curl -s https://api.github.com/users/${{ github.actor }}/keys | grep '"key":' | head -n1 | cut -d'"' -f4)
             sudo: ALL=(ALL) NOPASSWD:ALL
             shell: /bin/bash
         ssh_pwauth: false
@@ -46,34 +43,45 @@ jobs:
         EOF
         cloud-localds seed.img seed/user-data seed/meta-data
 
-    - name: Launch VM with restored disk
+    - name: Launch QEMU VM in background
       run: |
+        echo "Starting VM..."
         nohup qemu-system-x86_64 \
           -enable-kvm \
-          -m 16000 -smp 4 \
+          -m 2048 -smp 2 \
           -drive file=persistent.img,format=qcow2 \
           -drive file=ubuntu.img,format=qcow2 \
           -drive file=seed.img,format=raw \
           -net nic -net user,hostfwd=tcp::2222-:22 \
           -nographic > vm.log 2>&1 &
+        echo $! > vm.pid
 
-    - name: Wait for VM SSH to be ready
+    - name: Wait for VM to be ready
       run: |
+        echo "Waiting for SSH on port 2222..."
         for i in {1..30}; do
-          nc -z localhost 2222 && echo "VM is up!" && break
-          echo "Waiting for VM SSH..."
+          nc -z localhost 2222 && echo "VM is ready!" && break
           sleep 3
         done
 
-    - name: Start tmate for terminal access
+    - name: Start tmate session for terminal access
       uses: mxschmitt/action-tmate@v3
-      with:
-        limit-access-to-actor: false
 
-    - name: Upload persistent disk for next run
+    - name: Shutdown VM after tmate ends
+      run: |
+        echo "Shutting down VM..."
+        if [ -f vm.pid ]; then
+          kill $(cat vm.pid) || true
+        fi
+        sleep 5
+
+    - name: Upload persistent disk to GitHub Release
       if: always()
       run: |
-        curl -sL https://github.com/${{ github.repository }}/releases/download/vm-disk/persistent.img && echo "Backup already exists" && exit 0
-        gh release create vm-disk persistent.img -t "VM Disk Backup" -n "Auto backup of persistent disk"
+        echo "Deleting old release if exists..."
+        gh release delete vm-disk --yes || true
+
+        echo "Creating new release with updated persistent.img..."
+        gh release create vm-disk persistent.img -t "VM Backup" -n "Auto backup after VM shutdown"
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
